# octopus-without-limb

./: .coverage  .flake8  .gitignore  README.md  pyproject.toml
logs/: mylogs.txt
src/: decorators.py  external_api.py  file_reader.py  generators.py  masks.py  processing.py  utils.py  widget.py
src/logs/: mylogs.txt
src/tests/: test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_widget.py
